--- a/Hjem.html
+++ b/Hjem.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Hjem.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="icon" type="image/x-icon" href="/images/Landci.jpg">
     <title>Theo</title>
 </head>
 <body>
