--- a/Media.html
+++ b/Media.html
@@ -32,7 +32,7 @@
     <h1>MEDIA</h1>
 
     <div class="videoes">
-        <video controls src="videoes/Leo_10_min_Feet_baztian.mp4"></video>
+        <video controls playsinline src="videoes/Leo_10_min_Feet_baztian.mp4"></video>
         <video controls src="videoes/imonthatgoodkush.mp4"></video>
         <video class="lastVideo" controls src="videoes/SåBliMedMegIKveld2.mp4"></video>
         <video class="lastVideo" controls src="videoes/SåBliMedMegIKveld3.mp4"></video>
